--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@ href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" i
   <a class="nav-link" href="bank.html">About Us</a>
 </li>
 <li class="nav-item">
-  <a class="nav-link" href="home.html">Contact Us</a>
+  <a class="nav-link" href="index.html">Contact Us</a>
 </div>
 	  </ul>
   </div>
